@@ -1056,6 +1056,9 @@ void HandleLowHpMusicChange(struct Pokemon *mon, u8 battlerId)
     u16 hp = GetMonData(mon, MON_DATA_HP);
     u16 maxHP = GetMonData(mon, MON_DATA_MAX_HP);
 
+    //temp fix
+    return;
+
     if (GetHPBarLevel(hp, maxHP) == HP_BAR_RED)
     {
         if (!gBattleSpritesDataPtr->battlerData[battlerId].lowHpSong)
